--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 .hero {
   width: 100%;
-  height: 663px;
+  height: 105%;
   background-color: #f3fcf7;
   position: absolute;
   top: 0;
@@ -200,6 +200,26 @@ nav {
   font-size: 15px;
   line-height: 18.15px;
   color: #1d1d1f;
+}
+@media (max-width: 768px) {
+  .header {
+    height: 1600px;
+    border: 1px solid red;
+  }
+  .hero {
+    height: 300%;
+  }
+  .hero-content {
+    flex-direction: column;
+  }
+  .hero-text {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+
+  .hero-text p {
+    margin: 40px 0;
+  }
 }
 /* info section */
 .info {
