--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,6 @@ nav {
 @media (max-width: 768px) {
   .header {
     height: 1600px;
-    border: 1px solid red;
   }
   .hero {
     height: 300%;
@@ -350,7 +349,7 @@ nav {
   }
   .benefit-content {
     width: 90%;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
   }
 }
 
@@ -473,6 +472,13 @@ nav {
   line-height: 19.36px;
   color: #1d1d1f;
   margin: 20px 0 30px 0;
+}
+@media (max-width: 769px) {
+  .feature-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+  }
 }
 
 /* product section */
