--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,9 @@ nav {
 /* info section */
 .info {
   width: 80%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 50px;
   margin: auto;
   margin-top: 100px;
   padding: 30px 0;
@@ -242,11 +243,15 @@ nav {
   justify-content: space-between;
 }
 .icon {
-  padding: 16px;
+  padding: 24px;
   margin-right: 16px;
   background-color: #f3fcf7;
   color: #06c167;
   border-radius: 5px;
+}
+.icon i {
+  font-size: 24px;
+  font-weight: 600;
 }
 .shipping .icon:hover,
 .payment .icon:hover,
@@ -263,6 +268,7 @@ nav {
   font-size: 18px;
   font-weight: 400;
   line-height: 21.78px;
+  margin-bottom: 8px;
 }
 .details p {
   font-size: 14px;
@@ -271,7 +277,19 @@ nav {
 }
 @media (max-width: 769px) {
   .info {
+    grid-template-columns: 1fr 1fr;
+  }
+  .shipping,
+  .payment,
+  .promo,
+  .support {
     flex-direction: column;
+    padding: 16px;
+  }
+  .icon {
+    display: inline-block;
+    margin: auto;
+    margin-bottom: 16px;
   }
 }
 
@@ -353,6 +371,7 @@ nav {
   }
   .benefit-title {
     text-align: center;
+    flex: 1;
   }
 }
 
