--- a/styles.css
+++ b/styles.css
@@ -600,11 +600,9 @@ nav {
   position: relative;
 }
 .ingrediant-content {
-  position: absolute;
-  top: 20%;
-  bottom: 0;
-  right: 10%;
-  left: 15%;
+  background-image: url("./images/ingradient.png");
+  background-size: cover;
+  padding: 10%;
   text-align: center;
   height: 100%;
 }
@@ -617,7 +615,7 @@ nav {
 }
 @media (max-width: 769px) {
   .ingrediant-content {
-    top: 5%;
+    padding: 20% 10%;
   }
 }
 
@@ -721,17 +719,41 @@ nav {
 @media (max-width: 769px) {
   .footer {
     flex-direction: column;
+    text-align: center;
+    width: 80%;
   }
-  .footer-title {
-    margin-bottom: 40px;
+  .footer-title,
+  .footer-about,
+  .footer-company,
+  .footer-getintouch {
+    margin-bottom: 50px;
   }
-  .footer-about {
-    margin-bottom: 40px;
+  .footer-title p,
+  .footer-about p,
+  .footer-company p,
+  .footer-getintouch p {
+    margin-bottom: 10px;
   }
-  .footer-company {
-    margin-bottom: 40px;
+  .footer-title h3 {
+    margin: 20px;
+  }
+  .footer-title p,
+  .footer-getintouch p {
+    line-height: 24.22px;
+    width: 60%;
+    margin: auto;
+    margin-bottom: 20px;
   }
   .footer-getintouch {
-    margin-bottom: 40px;
+    width: 50%;
+    margin: auto;
+  }
+  .footer-getintouch input,
+  .footer-getintouch a {
+    margin-bottom: 10px;
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin-left: 0;
   }
 }
