--- a/styles.css
+++ b/styles.css
@@ -476,20 +476,29 @@ nav {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
 }
-.content {
+.content-1,
+.content-2,
+.content-3,
+.content-4 {
   background-color: #f3fcf7;
   padding: 30px;
   text-align: left;
 }
 
-.content h4 {
+.content-1 h4,
+.content-2 h4,
+.content-3 h4,
+.content-4 h4 {
   font-weight: 500;
   font-size: 32px;
   line-height: 38.73px;
   color: #1d1d1f;
   margin-top: 20px;
 }
-.content p {
+.content-1 p,
+.content-2 p,
+.content-3 p,
+.content-4 p {
   font-weight: 400;
   font-size: 16px;
   line-height: 19.36px;
@@ -497,8 +506,103 @@ nav {
   margin: 20px 0 30px 0;
 }
 @media (max-width: 769px) {
+  .feature h2 {
+    font-size: 35px;
+    line-height: 42.61px;
+    padding: 0 20%;
+  }
   .feature-content {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "i1"
+      "i2"
+      "i3"
+      "i4"
+      "i5"
+      "i6"
+      "i7"
+      "i8";
+  }
+  .pic-1 {
+    grid-area: i1;
+  }
+  .pic-1 img {
+    width: 100%;
+    height: 100%;
+  }
+  .content-1 {
+    grid-area: i2;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    border: 2px solid #06c167;
+    background-color: #f0f1ec;
+  }
+
+  .pic-2 {
+    grid-area: i3;
+  }
+  .pic-2 img {
+    width: 95%;
+    height: 100%;
+  }
+  .content-2 {
+    grid-area: i4;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    border: 2px solid #06c167;
+    background-color: #f0f1ec;
+  }
+  .pic-3 {
+    grid-area: i5;
+  }
+  .pic-3 img {
+    width: 95%;
+    height: 100%;
+  }
+  .content-3 {
+    grid-area: i6;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    border: 2px solid #06c167;
+    background-color: #f0f1ec;
+  }
+  .pic-4 {
+    grid-area: i7;
+  }
+  .pic-4 img {
+    width: 95%;
+    height: 100%;
+  }
+  .content-4 {
+    grid-area: i8;
+    width: 100%;
+    height: 100%;
+    padding: 10%;
+    border: 2px solid #06c167;
+    background-color: #f0f1ec;
+  }
+  .content-1 h4,
+  .content-2 h4,
+  .content-3 h4,
+  .content-4 h4 {
+    width: 50%;
+  }
+  .content-1 p,
+  .content-2 p,
+  .content-3 p,
+  .content-4 p {
+    padding: 10px 0;
+    width: 50%;
+  }
+  .content-1 .btn-div a,
+  .content-2 .btn-div a,
+  .content-3 .btn-div a,
+  .content-4 .btn-div a {
+    background-color: #f0ede2;
+    border: none;
   }
 }
 
@@ -594,7 +698,7 @@ nav {
   .product-section {
     grid-template-columns: 1fr;
     grid-gap: 30px;
-    width: 50%;
+    width: 70%;
   }
 }
 
