update start section for mobile

--- a/styles.css
+++ b/styles.css
@@ -378,18 +378,19 @@ nav {
 /* star section */
 
 .star {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   width: 80%;
   margin: auto;
   margin-top: 50px;
   justify-content: space-evenly;
 }
 .star-img {
-  flex: 1;
   background-color: #f3fafb;
   justify-content: right;
   display: flex;
   flex-direction: row-reverse;
+  margin-left: 5%;
 }
 .star-img img {
   padding-bottom: 60px;
@@ -397,7 +398,6 @@ nav {
   justify-content: right;
 }
 .star-content {
-  flex: 1.2;
   margin: auto;
   position: relative;
 }
@@ -442,11 +442,57 @@ nav {
 }
 @media (max-width: 769px) {
   .star {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     text-align: center;
+    width: 100%;
+    grid-template-areas:
+      "image"
+      "content";
+  }
+  .star-content {
+    grid-area: content;
+    margin-top: 80px;
+  }
+  .star-img {
+    grid-area: image;
+    justify-content: center;
+    margin: auto;
+    width: 90%;
+    height: 100%;
+    background-color: #f0f1ec;
+  }
+  .star-img img {
+    width: 90%;
+    height: 112%;
+    display: block;
+    justify-content: center;
+    margin-top: -10%;
+  }
+  .star-content h2 {
+    font-size: 35px;
+    line-height: 42.36px;
+    padding: 0 20%;
+    margin-bottom: 0px;
+  }
+  .star-content img {
+    position: absolute;
+    top: 0;
+  }
+  .star-item {
+    flex-direction: column;
+  }
+  .star-item h3 {
+    margin-top: 50px;
+  }
+  .star-item p {
+    margin-top: 20px;
   }
   .hero-btn {
-    margin-bottom: 40px;
+    display: block;
+    margin: 0 15%;
+    margin-bottom: 20px;
+    padding: 5% 0%;
   }
 }
 
