--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,6 @@ nav {
 .hero-content {
   display: flex;
   width: 80%;
-  height: 90%;
   margin: auto;
   margin-top: 50px;
 }
@@ -128,10 +127,13 @@ nav {
   background: white;
   display: inline-block;
 } */
-.hero-logo-area img {
+.hero-logo-area {
   position: absolute;
   bottom: 18%;
-  width: 95%;
+  width: 40%;
+}
+.hero-logo-area img {
+  width: 85%;
 }
 .hero-logo {
   display: flex;
@@ -142,10 +144,10 @@ nav {
   position: relative;
 }
 .hero-img img {
-  display: block;
+  display: inline-block;
   z-index: -1;
 }
-.hero-img .title-image {
+.title-image {
   width: 468px;
   height: 634px;
   position: absolute;
@@ -161,14 +163,15 @@ nav {
 .hero-rating {
   display: flex;
   background-color: white;
-  padding: 10px;
+  padding: 18px 10px;
   border-radius: 25px;
   position: absolute;
   left: 0;
   bottom: 50%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
 }
 .hero-rating:hover {
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9);
 }
 .hero-rating-icon {
   color: #06c167;
@@ -183,10 +186,11 @@ nav {
   align-items: center;
   position: absolute;
   right: 0;
-  top: 30%;
+  bottom: 62%;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.4);
 }
 .review:hover {
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.9);
 }
 .review img {
   display: inline-block;
@@ -206,7 +210,7 @@ nav {
     height: 1600px;
   }
   .hero {
-    height: 300%;
+    height: 325%;
   }
   .hero-content {
     flex-direction: column;
@@ -214,10 +218,64 @@ nav {
   .hero-text {
     text-align: center;
     margin-bottom: 40px;
+    margin-top: 0px;
+    height: 10%;
+  }
+  .hero-text h1 {
+    font-size: 51px;
+    line-height: 61.77px;
+    padding: 0% 15%;
+  }
+  .hero-text p {
+    font-size: 14px;
+    margin: 40px 0;
+    padding: 0% 15%;
+  }
+  /* .hero-img {
+    background-image: url("./images/title-image.png");
+  } */
+  .title-image {
+    position: relative;
+    padding: 0px 10% 0px 15%;
+    width: 110%;
+  }
+  .hero-logo-area {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    padding-top: 100px;
+  }
+  .hero-logo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    margin: auto;
+    grid-template-areas:
+      "item-1 item-2"
+      "item-3 item-3";
+  }
+  .hero-logo-item-1 {
+    grid-area: item-1;
   }
 
-  .hero-text p {
-    margin: 40px 0;
+  .hero-logo-item-2 {
+    grid-area: item-2;
+  }
+  .hero-logo-item-3 {
+    grid-area: item-3;
+    padding-top: 20px;
+    margin-left: 25%;
+    width: 50%;
+  }
+  .review {
+    position: absolute;
+    right: 30%;
+    bottom: 3%;
+  }
+  .hero-rating {
+    position: absolute;
+    left: 31%;
+    bottom: 12%;
   }
 }
 /* info section */
@@ -355,19 +413,36 @@ nav {
 @media (max-width: 769px) {
   .benefit {
     flex-direction: column;
-    margin: 0;
-    margin-top: 80px;
+    margin-top: 120px;
     justify-content: center;
   }
+
   .benefit-img {
-    margin-bottom: 40px;
+    margin: auto;
+    width: 90%;
+    height: 100%;
+    justify-content: center;
+    background-color: #f0f1ec;
   }
   .benefit-img img {
     width: 90%;
+    height: 100%;
+    display: block;
+    justify-content: center;
+    margin-top: -7%;
+    padding-bottom: 5%;
   }
   .benefit-content {
     width: 90%;
-    margin-bottom: 40px;
+    margin: 80px 0;
+  }
+  .benefit-content h2 {
+    font-size: 35px;
+    line-height: 42.36px;
+    padding: 0 10%;
+  }
+  .benefit-content ul {
+    padding: 0 20%;
   }
   .benefit-title {
     text-align: center;
@@ -458,13 +533,13 @@ nav {
     grid-area: image;
     justify-content: center;
     margin: auto;
-    width: 90%;
+    width: 80%;
     height: 100%;
     background-color: #f0f1ec;
   }
   .star-img img {
     width: 90%;
-    height: 112%;
+    height: 114%;
     display: block;
     justify-content: center;
     margin-top: -10%;
